# business-tax-calculator

./: .gitignore  BusinessTaxLiabilityCalculator.py  README.md  analyzer.py  app.py  deductions.py  factory.py  liabilities.py  main.py  package_project.ps1  pyproject.toml  requirements.txt  run.py  scenario.py  visualization.py  visualization_viewer.py
.github/workflows/: ci.yml  run-script.yml
app/: streamlit_app.py
app/calculator/: deduction_calculator.py  income_calculator.py  local_tax_calculator.py  state_tax_calculator.py  tax_calculator.py
app/model/: business.py  tax_return.py
app/model/deduction/: __init__.py  base_deduction.py  business_deduction.py  business_expenses_deduction.py  deduction.py  deduction_registry.py  health_insurance_deduction.py  home_office_deduction.py  other_deduction.py  retirement_contribution_deduction.py  self_employment_tax_deduction.py
app/model/filing_status/: s_corporation.py
app/model/liabilities/: federal_income_tax_liability.py  liability.py  local_income_tax_liability.py  medicare_income_tax_liability.py  medicare_tax_liability.py  social_security_income_tax_liability.py  social_security_tax_liability.py  (+2 more)
app/utils/: __init__.py  constants.py
calculator/: deduction_calculator.py  income_calculator.py  local_tax_calculator.py  state_tax_calculator.py  tax_calculator.py
models/: business.py  deductions.py
old/: BusinessTaxLiabilityCalculator.py  analyzer.py  deductions.py  liabilities.py  main.py
src/business_tax_calculator/: run.py
tax_liabilities/: federal_income_tax_liability.py  local_income_tax_liability.py  medicare_tax_liability.py  social_security_tax_liability.py  state_income_tax_liability.py  tax_liability.py
tests/: test_full_tax_suite.py  test_scenarios.py  test_tax_logic.py
utils/: config.py  helpers.py
(+44 files in other folders)
