[project]
name = "business-tax-calculator"
version = "0.1.0"
description = "A tool for calculating business taxes"

[project.dependencies]
pandas = "^1.2"
numpy = "^1.19"

[project.scripts]
business-tax-calc = "business_tax_calculator.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"